--- a/graphql-query-examples/filtering-entity-queries/index.html
+++ b/graphql-query-examples/filtering-entity-queries/index.html
@@ -5,18 +5,18 @@
 <link id=dark-mode-css href=/css/clr-ui-dark.min.css rel=stylesheet type=text/css as=style><link id=light-mode-css disabled href=/css/clr-ui.min.css rel=stylesheet type=text/css as=style><link href=/css/clr-icons.min.css rel=stylesheet><link href=/css/definit-clarity.css rel=stylesheet><link href=/css/syntax-highlighting.css rel=stylesheet><link href=/css/lightbox.min.css rel=stylesheet></head><body id=body onload='setCurrentTheme("dark")'><clr-main-container class=main-container><header class=header-6><div class=branding><a class=logo-and-title href=/><img class=clr-header-logo alt src=/images/aria-hub.png>
 <span class=title>&nbsp;vmware-aria-graph-examples</span></a></div><nav class=header-nav></nav><div class=header-actions><form class=search id=search method=get action=//google.com/search><label for=search_input><input id=search_input type=text name=q placeholder="Search with Google">
 <input type=hidden name=as_sitesearch value=https://vmware-aria-graph-examples.github.io></label></form><a class="nav-link nav-icon" aria-label=theme onclick=toggleThemeMode()><clr-icon shape=sun id=icon-theme-mode title="Toggle theme mode"></clr-icon></a></div></header><div class=content-container><div class=content-area><h1>Filtering Entity Queries</h1><p>When you perform an entityQuery you can filter the response based on the value of fields using the <a href=https://api.mgmt.cloud.vmware.com/aria/docs/queryfilter.doc.html target=_blank>QueryFilter object <clr-icon shape=pop-out></clr-icon>
-</a>.</p><p>The <code>operator</code> field</p><ul><li><code>EQ</code> equal to</li><li><code>NEQ</code> not equal to</li><li><code>LT</code> less than</li><li><code>LTE</code> less than or equal to</li><li><code>GT</code> greater than</li><li><code>GTE</code> greater than or equal to</li><li><code>CONTAINS</code> case sensitive check for the provided string within the field value</li><li><code>STARTSWITH</code> case sensitive check if the field value starts with the provided string</li><li><code>ENDSWITH</code> case sensitive check if the field value ends with the provided string</li><li><code>ISNULL</code> field is null</li><li><code>ISNOTNULL</code> field is not null</li></ul><h2 id=find-a-vm-with-a-name-tag-of-value-vm1>Find a VM with a &ldquo;Name&rdquo; tag of value &ldquo;VM1&rdquo; <a class=anchor href=#find-a-vm-with-a-name-tag-of-value-vm1><i class="fas fa-hashtag"></i></a></h2><div class=highlight><div class=chroma><table class=lntable><tr><td class=lntd><pre tabindex=0 class=chroma><code><span class=lnt> 1
+</a>.</p><p>When building the <code>QueryFilter</code> object you provide a <code>field</code> name (which must be a field on the <code>entityType</code> you are looking for) on which to filter. The <code>operator</code> field is an ENUM with the below values that can be used when creating a filter:</p><ul><li><code>EQ</code> equal to</li><li><code>NEQ</code> not equal to</li><li><code>LT</code> less than</li><li><code>LTE</code> less than or equal to</li><li><code>GT</code> greater than</li><li><code>GTE</code> greater than or equal to</li><li><code>CONTAINS</code> case sensitive check for the provided string within the field value</li><li><code>STARTSWITH</code> case sensitive check if the field value starts with the provided string</li><li><code>ENDSWITH</code> case sensitive check if the field value ends with the provided string</li><li><code>ISNULL</code> field is null</li><li><code>ISNOTNULL</code> field is not null</li></ul><p>The <code>value</code> is provided for the comparison operators, except the <code>ISNULL</code> and <code>ISNOTNULL</code> operators.</p><h2 id=find-a-vm-with-a-name-tag-of-value-vm1>Find a VM with a &ldquo;Name&rdquo; tag of value &ldquo;VM1&rdquo; <a class=anchor href=#find-a-vm-with-a-name-tag-of-value-vm1><i class="fas fa-hashtag"></i></a></h2><p>A basic example of filtering is to look for any AWS EC2 instances and Azure Virtual Machines that are tagged with <code>Name=VM 1</code>. The query below uses the field <code>tag.Name</code> (the dot notation allows you to access nested field names) and the operator <code>EQ</code>, and looks for the value <code>VM 1</code>. Note that the values field is an array, so it can hold multiple values.</p><div class=highlight><div class=chroma><table class=lntable><tr><td class=lntd><pre tabindex=0 class=chroma><code><span class=lnt> 1
 </span><span class=lnt> 2
 </span><span class=lnt> 3
 </span><span class=lnt> 4
-</span><span class=hl><span class=lnt> 5
-</span></span><span class=hl><span class=lnt> 6
-</span></span><span class=hl><span class=lnt> 7
-</span></span><span class=hl><span class=lnt> 8
-</span></span><span class=hl><span class=lnt> 9
-</span></span><span class=hl><span class=lnt>10
-</span></span><span class=hl><span class=lnt>11
-</span></span><span class=lnt>12
+</span><span class=lnt> 5
+</span><span class=lnt> 6
+</span><span class=lnt> 7
+</span><span class=lnt> 8
+</span><span class=lnt> 9
+</span><span class=lnt>10
+</span><span class=lnt>11
+</span><span class=lnt>12
 </span><span class=lnt>13
 </span><span class=lnt>14
 </span><span class=lnt>15
@@ -33,13 +33,13 @@
 </span></span></span><span class=line><span class=cl><span class=w>  </span><span class=nc>entityQuery</span><span class=w> </span><span class=p>{</span><span class=w>
 </span></span></span><span class=line><span class=cl><span class=w>    </span><span class=kd>query</span><span class=nc>Entities</span><span class=p>(</span><span class=w>
 </span></span></span><span class=line><span class=cl><span class=w>      </span><span class=py>entityType</span><span class=p>:</span><span class=w> </span><span class=p>[</span><span class=s>&#34;AWS.EC2.instance&#34;</span><span class=p>,</span><span class=w> </span><span class=s>&#34;VMW.VC.VM&#34;</span><span class=p>]</span><span class=w>
-</span></span></span><span class="line hl"><span class=cl><span class=w>      </span><span class=nc>filter</span><span class=p>:</span><span class=w> </span><span class=p>{</span><span class=w> 
-</span></span></span><span class="line hl"><span class=cl><span class=w>        </span><span class=nc>field</span><span class=p>:</span><span class=w> </span><span class=s>&#34;tag.Name&#34;</span><span class=p>,</span><span class=w>
-</span></span></span><span class="line hl"><span class=cl><span class=w>        </span><span class=nc>operator</span><span class=p>:</span><span class=w> </span><span class=nc>EQ</span><span class=p>,</span><span class=w>
-</span></span></span><span class="line hl"><span class=cl><span class=w>        </span><span class=py>values</span><span class=p>:</span><span class=w> </span><span class=p>[</span><span class=w>
-</span></span></span><span class="line hl"><span class=cl><span class=w>          </span><span class=s>&#34;VM 1&#34;</span><span class=w>
-</span></span></span><span class="line hl"><span class=cl><span class=w>        </span><span class=p>]</span><span class=w>
-</span></span></span><span class="line hl"><span class=cl><span class=w>      </span><span class=p>}</span><span class=w>
+</span></span></span><span class=line><span class=cl><span class=w>      </span><span class=nc>filter</span><span class=p>:</span><span class=w> </span><span class=p>{</span><span class=w> 
+</span></span></span><span class=line><span class=cl><span class=w>        </span><span class=nc>field</span><span class=p>:</span><span class=w> </span><span class=s>&#34;tag.Name&#34;</span><span class=p>,</span><span class=w>
+</span></span></span><span class=line><span class=cl><span class=w>        </span><span class=nc>operator</span><span class=p>:</span><span class=w> </span><span class=nc>EQ</span><span class=p>,</span><span class=w>
+</span></span></span><span class=line><span class=cl><span class=w>        </span><span class=py>values</span><span class=p>:</span><span class=w> </span><span class=p>[</span><span class=w>
+</span></span></span><span class=line><span class=cl><span class=w>          </span><span class=s>&#34;VM 1&#34;</span><span class=w>
+</span></span></span><span class=line><span class=cl><span class=w>        </span><span class=p>]</span><span class=w>
+</span></span></span><span class=line><span class=cl><span class=w>      </span><span class=p>}</span><span class=w>
 </span></span></span><span class=line><span class=cl><span class=w>    </span><span class=p>)</span><span class=w> </span><span class=p>{</span><span class=w>
 </span></span></span><span class=line><span class=cl><span class=w>      </span><span class=nc>totalCount</span><span class=w>
 </span></span></span><span class=line><span class=cl><span class=w>      </span><span class=py>entities</span><span class=w> </span><span class=p>{</span><span class=w>
