deploy: vmware-aria-graph-examples/vmware-aria-graph-examples@86aaad82b7bdac15646c39426983890696039d9b

--- a/graphql-query-examples/queryentitybytype/index.html
+++ b/graphql-query-examples/queryentitybytype/index.html
@@ -85,7 +85,7 @@
 </span></span><span class=line><span class=cl>                <span class=nt>&#34;id&#34;</span><span class=p>:</span> <span class=s2>&#34;vrn/org:2acf4023-1778-4e6a-a892-7635b8c7f4fb/provider:VROPS/EC2Instance:3a8252a6-a0d9-44e6-beef-63ee5c73d85c&#34;</span>
 </span></span><span class=line><span class=cl>              <span class=p>},</span>
 </span></span><span class=line><span class=cl>              <span class=p>{</span>
-</span></span><span class=line><span class=cl>                <span class=nt>&#34;name&#34;</span><span class=p>:</span> <span class=s2>&#34;Aria&#34;</span><span class=p>,</span>
+</span></span><span class=line><span class=cl>                <span class=nt>&#34;name&#34;</span><span class=p>:</span> <span class=s2>&#34;Tanzu&#34;</span><span class=p>,</span>
 </span></span><span class=line><span class=cl>                <span class=nt>&#34;id&#34;</span><span class=p>:</span> <span class=kc>null</span>
 </span></span><span class=line><span class=cl>              <span class=p>}</span>
 </span></span><span class=line><span class=cl>            <span class=p>]</span>
@@ -95,7 +95,7 @@
 </span></span><span class=line><span class=cl>            <span class=nt>&#34;entityType&#34;</span><span class=p>:</span> <span class=s2>&#34;AWS.EC2.Instance&#34;</span><span class=p>,</span>
 </span></span><span class=line><span class=cl>            <span class=nt>&#34;namespaces&#34;</span><span class=p>:</span> <span class=p>[</span>
 </span></span><span class=line><span class=cl>              <span class=p>{</span>
-</span></span><span class=line><span class=cl>                <span class=nt>&#34;name&#34;</span><span class=p>:</span> <span class=s2>&#34;Aria&#34;</span><span class=p>,</span>
+</span></span><span class=line><span class=cl>                <span class=nt>&#34;name&#34;</span><span class=p>:</span> <span class=s2>&#34;Tanzu&#34;</span><span class=p>,</span>
 </span></span><span class=line><span class=cl>                <span class=nt>&#34;id&#34;</span><span class=p>:</span> <span class=kc>null</span>
 </span></span><span class=line><span class=cl>              <span class=p>},</span>
 </span></span><span class=line><span class=cl>              <span class=p>{</span>
